# SDL3-Game

./: CMakeLists.txt  Makefile  README.md
Git/: .editorconfig  .gitattributes  .gitignore
src/: main.c
